--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 col-12 mx-auto">
-                                <h2 class="mb-4">Best hairdressers</h2>
+                                <h2 class="mb-4">Лучшие парикмахеры</h2>
                                 <div class="border-bottom pb-3 mb-5">
                                     <p>💪 5 лет успешной работы в Beauty индустрии и более 1000 постоянных клиентов⁣!⁣⠀
                                     </p>
